[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["clorose <gohan9511@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.20"
requests = "^2.32.3"
llvmlite = ">=0.39.0"
numpy = ">=1.21,<1.25"
numba = "<0.58"
librosa = "^0.10.2.post1"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
